crates/hdk/tests/tests/macros/entry_type_conversions_wrong_enum.stderr
error: hdk_entry_types_conversions must only have a single enum tuple
 --> tests/tests/macros/entry_type_conversions_wrong_enum.rs:5:7
  |
5 |     A(A, B),
  |       ^^^^
